<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/hamburgerButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:src="@drawable/baseline_view_headline_24" />

    <TextView
        android:id="@+id/examTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/examdeets"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextExamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/examTitle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="Exam Name" />

    <EditText
        android:id="@+id/editTextExamDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextExamName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Exam Date  MM/DD/YYYY" />

    <EditText
        android:id="@+id/editTextExamTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextExamDate"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Exam Time" />

    <EditText
        android:id="@+id/editTextExamLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextExamTime"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="Exam Location" />

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextExamLocation">

        <Button
            android:id="@+id/buttonSaveExam"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="25sp"
            android:backgroundTint="@color/lightpink"
            android:textColor="@color/white"
            android:text="@string/save" />

        <Button
            android:id="@+id/buttonEditExam"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="25sp"
            android:backgroundTint="@color/lightorange"
            android:textColor="@color/white"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonDeleteExam"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="25sp"
            android:backgroundTint="@color/skyblue"
            android:textColor="@color/white"
            android:text="@string/delete" />

    </LinearLayout>
    <Button
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonlayout"
        android:layout_marginTop="20dp"
        android:text="Sort Exam Date" />





    <ListView
        android:id="@+id/listViewExams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sortButton"
        android:choiceMode="singleChoice"
        android:layout_marginTop="16dp" />



</RelativeLayout>